--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <script src="script.js"></script>
+    <script src="test.js"></script>
   </body>
 </html>
