Add feature render board, add CSS for board and tiles, JS -> DOM

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <script src="test.js"></script>
+    <div class="outer-wrapper container anchor">
+      I'm an anchor.
+    </div>
+    <!-- <script src="./script.js"></script>
+    <script src="./test.js"></script> -->
+    <script src="./test_classes.js"></script>
   </body>
 </html>
