Format gameboard and tiles; fix alignment issues; change grid layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="outer-wrapper container anchor">
-      I'm an anchor.
+      <!-- I'm an anchor. -->
     </div>
     <!-- <script src="./script.js"></script>
     <script src="./test.js"></script> -->
