--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <div class="outer-wrapper container anchor">
       <!-- I'm an anchor. -->
     </div>
-    <!-- <script src="./script.js"></script>
-    <script src="./test.js"></script> -->
-    <script src="./test_classes.js"></script>
-    <!-- <script src="./script_before_classes.js"></script> -->
+    <script src="./script.js"></script>
   </body>
 </html>
