fix: remove abs pos from text to prevent mobile overlap

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="outer-wrapper container anchor">
       <!-- I'm an anchor. -->
-      <div style="position: absolute; bottom: 5%; color: purple; font-style: italic;">Please select player before selecting square.</div>
+      <div style="color: purple; font-style: italic; text-align: center; margin-top: 10px;">Please select player before selecting square.</div>
     </div>
     <script src="./script.js"></script>
   </body>
